--- a/MODULE.bazel
+++ b/MODULE.bazel
@@ -5,6 +5,7 @@ bazel_dep(name = "bazel_env.bzl", version = "0.4.0")
 bazel_dep(name = "bazelrc-preset.bzl", version = "1.0.1")
 bazel_dep(name = "buildifier_prebuilt", version = "8.2.0.2")
 bazel_dep(name = "platforms", version = "1.0.0")
+bazel_dep(name = "rules_mypy", version = "0.39.0")
 bazel_dep(name = "rules_multitool", version = "1.7.0")
 bazel_dep(name = "rules_oci", version = "2.2.6")
 bazel_dep(name = "rules_python", version = "1.5.1")
